--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 /client/node_modules
 /client/coverage
 /client/build
-/client/.ignore
 
+/server/node_modules
+/server/.clasp.json
+
+/.ignore
 
 
 
